--- a/index.html
+++ b/index.html
@@ -15,8 +15,22 @@
 
 <body>
   <header class="header">
-
+    <div class="container">
+      <div class="menu">
+        <div class="logo menu__logo">
+          <img src="img/logo.svg" alt="logo" class="logo__cat">КОТЕЙКА
+        </div>
+        <nav class="nav menu__nav">
+          <li class="nav__item"><a href="#">Почему мы?</a></li>
+          <li class="nav__item"><a href="#">Номера</a></li>
+          <li class="nav__item"><a href="#">Отзывы</a></li>
+          <li class="nav__item"><a href="#">Как нас найти</a></li>
+        </nav>
+      </div>
+      <!-- /.menu -->
+    </div>
   </header>
+  <!-- /.header -->
   <main>
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
