--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
   <header class="header">
     <div class="container">
       <div class="menu">
+        <div id="menu-togle" class="menu-icon">
+          <div class="menu-icon-line"></div>
+        </div>
+        <!-- Кнопка для мобильной навигации -->
         <div class="logo menu__logo">
-          <img src="img/logo.svg" alt="logo" class="logo__cat">КОТЕЙКА
+          <img src="img/logo.svg" alt="logo" class="logo__cat">
+          <img src="img/КОТЕЙКА.png" alt="logo">
+        </div>
+        <div class="logo logo__mobile menu__logo">
+          <img src="img/logoMobile.png" alt="logo" class="logo__cat">
         </div>
         <nav class="nav menu__nav">
           <li class="nav__item"><a href="#">Почему мы?</a></li>
@@ -26,6 +34,13 @@
           <li class="nav__item"><a href="#">Отзывы</a></li>
           <li class="nav__item"><a href="#">Как нас найти</a></li>
         </nav>
+        <div class="contact menu__contact">
+          <div class="contact__social">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+          </div>
+        </div>
       </div>
       <!-- /.menu -->
     </div>
