--- a/index.html
+++ b/index.html
@@ -22,23 +22,28 @@
         </div>
         <!-- Кнопка для мобильной навигации -->
         <div class="logo menu__logo">
-          <img src="img/logo.svg" alt="logo" class="logo__cat">
-          <img src="img/КОТЕЙКА.png" alt="logo">
+          <a href="index.html"> <img src="img/logo.png" alt="logo" class="logo__cat">
+          </a>
         </div>
         <div class="logo logo__mobile menu__logo">
-          <img src="img/logoMobile.png" alt="logo" class="logo__cat">
+          <a href="index.html"> <img src="img/logoMobile.png" alt="logo" class="logo__cat">
         </div>
-        <nav class="nav menu__nav">
-          <li class="nav__item"><a href="#">Почему мы?</a></li>
-          <li class="nav__item"><a href="#">Номера</a></li>
-          <li class="nav__item"><a href="#">Отзывы</a></li>
-          <li class="nav__item"><a href="#">Как нас найти</a></li>
-        </nav>
-        <div class="contact menu__contact">
-          <div class="contact__social">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+        <div class="menu__mobile">
+          <nav class="nav menu__nav">
+            <li class="nav__item"><a href="#">Почему мы?</a></li>
+            <li class="nav__item"><a href="#">Номера</a></li>
+            <li class="nav__item"><a href="#">Отзывы</a></li>
+            <li class="nav__item nav__first"><a href="#">Как нас найти</a></li>
+            <li class="nav__item nav__second"><a href="#">Контакты</a></li>
+          </nav>
+          <div class="contacts menu__contacts">
+            <a href="tel:+78003335599" class="contacts__phone">
+              8 (800) 333-55-99</a>
+            <div class="contacts__social">
+              <a href="https://ru-ru.facebook.com" target="_blank"><img src="img/facebook.png" alt="facebook"></a>
+              <a href="https://www.instagram.com"><img src="img/instagram.png" alt="instagram" target="_blank"></a>
+              <a href="https://vk.com"><img src="img/vkontakte.png" alt="vkontakte" target="_blank"></a>
+            </div>
           </div>
         </div>
       </div>
