--- a/index.html
+++ b/index.html
@@ -52,6 +52,24 @@
   </header>
   <!-- /.header -->
   <main>
+    <div class="main">
+      <div class="container2">
+        <div class="fone main__fone">
+          <img src="img/catmain.svg" alt="catmain" class="fone__first">
+          <img src="img/Vector.svg" alt="Vector" class="fone__second">
+        </div>
+        <div class="text main__text">
+          <span class="text__address">
+            Санкт-Петербург
+          </span>
+          <span class="text__name">
+            Котейка
+          </span>
+          <span class="text__hotel">Уютная гостиница для котов и кошек</span>
+        </div>
+      </div>
+    </div>
+    <!-- /.main -->
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
