add new block main

--- a/index.html
+++ b/index.html
@@ -54,18 +54,15 @@
   <main>
     <div class="main">
       <div class="container2">
-        <div class="fone main__fone">
-          <img src="img/catmain.svg" alt="catmain" class="fone__first">
-          <img src="img/Vector.svg" alt="Vector" class="fone__second">
-        </div>
-        <div class="text main__text">
-          <span class="text__address">
+        <div class="content main__content">
+          <span class="content__address">
             Санкт-Петербург
           </span>
-          <span class="text__name">
+          <span class="content__name">
             Котейка
           </span>
-          <span class="text__hotel">Уютная гостиница для котов и кошек</span>
+          <span class="content__hotel">Уютная гостиница для котов и кошек</span>
+          <button class="btn content__btn">Забронировать </button>
         </div>
       </div>
     </div>
