--- a/index.html
+++ b/index.html
@@ -67,7 +67,14 @@
       </div>
     </div>
     <!-- /.main -->
+    <div class="service">
+      <div class="container">
+        <div class="service__card">
 
+        </div>
+      </div>
+    </div>
+    <!-- /.service -->
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
