--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- /.header -->
   <main>
     <div class="main">
-      <div class="container2">
+      <div class="container">
         <div class="content main__content">
           <span class="content__address">
             Санкт-Петербург
@@ -70,7 +70,9 @@
     <div class="service">
       <div class="container">
         <div class="service__card">
-
+          <h1 class="title service__card-title">
+            Почему мы?
+          </h1>
         </div>
       </div>
     </div>
