new block cards

--- a/index.html
+++ b/index.html
@@ -67,16 +67,52 @@
       </div>
     </div>
     <!-- /.main -->
-    <div class="service">
-      <div class="container">
-        <div class="service__card">
-          <h1 class="title service__card-title">
-            Почему мы?
-          </h1>
+    <section class="service">
+      <img src="img/paw.png" alt="paw" class="service__paw">
+      <h1 class="title">
+        Почему мы?
+      </h1>
+      <div class="cards service__cards">
+        <div class="card">
+          <img src="img/card1.png" alt="card" class="card__img">
+          <div class="card__title">Комфортная температура</div>
+          <div class="card__text">Во всех номерах поддерживается комфортная температура в пределах 23 - 25 градусов. В
+            каждом номере можно дополнительно отрегулировать температуру.</div>
+        </div>
+        <div class="card">
+          <img src="img/card2.png" alt="card" class="card__img">
+          <div class="card__title">Видеонаблюдение</div>
+          <div class="card__text">Мы предоставляем доступ в нашу систему. Вы сможете следить за своим питомцем со
+            своего смартфона или компьютера.</div>
+        </div>
+        <div class="card">
+          <img src="img/card3.png" alt="card" class="card__img">
+          <div class="card__title">Услуги Зоотакси</div>
+          <div class="card__text">Мы приедем за вашим питомцем в любой район Санкт-Петербурга.</div>
+        </div>
+        <div class="card">
+          <img src="img/card4.png" alt="card" class="card__img">
+          <div class="card__title">Сбалансированное питание</div>
+          <div class="card__text">Вы можете привезти свой корм или доверить рацион своего питомца нашим
+            профессионалам.</div>
+        </div>
+        <div class="card">
+          <img src="img/card5.png" alt="card" class="card__img">
+          <div class="card__title">Ежедневные прогулки</div>
+          <div class="card__text">По вашему желанию мы выгуливаем вашего питомца два раза в день на специализированной
+            закрытой территории.</div>
+        </div>
+        <div class="card">
+          <img src="img/card6.png" alt="card" class="card__img">
+          <div class="card__title">Лучшие ветеринары</div>
+          <div class="card__text">В гостинице 24 часа дежурит ветеринарный врач, который окажет любую помощь в случае
+            необходимости.</div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- /.service -->
+    <section class="rooms"></section>
+    <!-- /.rooms -->
   </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
